--- a/6-2 定时器外部时钟-按键时钟/Project.uvprojx
+++ b/6-2 定时器外部时钟-按键时钟/Project.uvprojx
@@ -680,6 +680,16 @@
               <FileType>5</FileType>
               <FilePath>.\System\usart.h</FilePath>
             </File>
+            <File>
+              <FileName>Timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\System\Timer.c</FilePath>
+            </File>
+            <File>
+              <FileName>Timer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\System\Timer.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
